# file_encryptor

./: CMakeLists.txt  README.md  README_CN.md
scripts/: FTXUI_v5.0.0_build.sh  openssl_1.1.1_build.sh
src/: application.cpp  en_de.h  encryption.cpp  encryption.h  json_handler.cpp  json_handler.h
